[gd_scene load_steps=17 format=3 uid="uid://i7qpg6tjfq6s"]

[ext_resource type="Script" uid="uid://dv7bg556b7k6e" path="res://scripts/hud.gd" id="1_q1ok0"]
[ext_resource type="PackedScene" uid="uid://5l2vv43h2d7v" path="res://scenes/map.tscn" id="1_w7dup"]
[ext_resource type="FontFile" uid="uid://dy4n1bik70bfr" path="res://assets/fonts/Tiny5-Regular.ttf" id="2_glx5p"]

[sub_resource type="Gradient" id="Gradient_5ysmq"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.25490198, 0.18431373, 0.22352941, 0.5882353)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5ysmq"]
gradient = SubResource("Gradient_5ysmq")
width = 1280
height = 100

[sub_resource type="Animation" id="Animation_q1ok0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MapContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(150, 824)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MapContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_glx5p"]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MapContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(4.924576, 1),
"update": 0,
"values": [Vector2(150, 74), Vector2(150, 824)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MapContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.39215687)]
}

[sub_resource type="Animation" id="Animation_w7dup"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MapContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.07966028, 1),
"update": 0,
"values": [Vector2(150, 824), Vector2(150, 74)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MapContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.39215687), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_glx5p"]
_data = {
&"RESET": SubResource("Animation_q1ok0"),
&"hide": SubResource("Animation_glx5p"),
&"show": SubResource("Animation_w7dup")
}

[sub_resource type="GradientTexture2D" id="GradientTexture2D_71u3i"]
gradient = SubResource("Gradient_5ysmq")
width = 300
height = 24

[sub_resource type="Gradient" id="Gradient_6fi6k"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.25490198, 0.18431373, 0.22352941, 0.5882353)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uo2fv"]
gradient = SubResource("Gradient_6fi6k")
width = 160
height = 80

[sub_resource type="Animation" id="Animation_047uy"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.1593202, 1),
"update": 0,
"values": [Vector2(1280, 0), Vector2(800, 0)]
}

[sub_resource type="Animation" id="Animation_5pdws"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1280, 0)]
}

[sub_resource type="Animation" id="Animation_5ysmq"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(5.6568522, 1),
"update": 0,
"values": [Vector2(800, 0), Vector2(1280, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hd3ao"]
_data = {
&"RESET": SubResource("Animation_5pdws"),
&"hide": SubResource("Animation_5ysmq"),
&"show": SubResource("Animation_047uy")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_q1ok0")

[node name="PlayerCoordinatesLabel" type="Label" parent="."]
z_index = 1
offset_left = 18.0
offset_top = 657.0
offset_right = 144.0
offset_bottom = 711.0
theme_override_colors/font_color = Color(0.8039216, 0.78039217, 0.7411765, 1)
theme_override_fonts/font = ExtResource("2_glx5p")
theme_override_font_sizes/font_size = 48
text = "22, 22"

[node name="MapHintLabel" type="Label" parent="."]
z_index = 1
offset_left = 1017.0
offset_top = 657.0
offset_right = 1287.0
offset_bottom = 711.0
theme_override_colors/font_color = Color(0.8039216, 0.78039217, 0.7411765, 1)
theme_override_fonts/font = ExtResource("2_glx5p")
theme_override_font_sizes/font_size = 48
text = "Q: Open map"

[node name="Backdrop" type="Sprite2D" parent="."]
position = Vector2(640, 702)
texture = SubResource("GradientTexture2D_5ysmq")

[node name="MapContainer" type="Node2D" parent="."]
position = Vector2(150, 824)

[node name="Map" parent="MapContainer" instance=ExtResource("1_w7dup")]
scale = Vector2(3, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="MapContainer"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_glx5p")
}

[node name="MenuContainer" type="Node2D" parent="."]
position = Vector2(1280, 0)
scale = Vector2(3, 3)

[node name="Backdrop" type="Sprite2D" parent="MenuContainer"]
position = Vector2(60, 12)
texture = SubResource("GradientTexture2D_71u3i")

[node name="Label" type="Label" parent="MenuContainer/Backdrop"]
offset_left = -140.99997
offset_top = -9.666669
offset_right = 107.00003
offset_bottom = 13.333335
theme_override_colors/font_color = Color(0.8039216, 0.78039217, 0.7411765, 1)
theme_override_fonts/font = ExtResource("2_glx5p")
text = "Esc: Menu      E: Return to office"

[node name="SettingsBackdrop" type="Sprite2D" parent="MenuContainer"]
position = Vector2(80, 64)
texture = SubResource("GradientTexture2D_uo2fv")

[node name="Bgm" type="Label" parent="MenuContainer/SettingsBackdrop"]
offset_left = -67.00001
offset_top = -29.666668
offset_right = 74.99993
offset_bottom = 30.333332
theme_override_colors/font_color = Color(0.8039216, 0.78039217, 0.7411765, 1)
theme_override_fonts/font = ExtResource("2_glx5p")
text = "1: Mute BGM"

[node name="Sfx" type="Label" parent="MenuContainer/SettingsBackdrop"]
offset_left = -67.00001
offset_top = -8.0
offset_right = 74.99993
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.8039216, 0.78039217, 0.7411765, 1)
theme_override_fonts/font = ExtResource("2_glx5p")
text = "2: Mute SFX"

[node name="Fullscreen" type="Label" parent="MenuContainer/SettingsBackdrop"]
offset_left = -67.00001
offset_top = 14.666667
offset_right = 74.99993
offset_bottom = 74.666664
theme_override_colors/font_color = Color(0.8039216, 0.78039217, 0.7411765, 1)
theme_override_fonts/font = ExtResource("2_glx5p")
text = "3: Toggle Fullscreen"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuContainer"]
libraries = {
&"": SubResource("AnimationLibrary_hd3ao")
}
